made whole game

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="container">
         <p class="live">Życia: <spam class="liveCounter"></spam>
         </p>
-        <p class="punks">Punkty: <spam class="punktsCounter"></spam>
+        <p class="punks">Punkty: <spam class="punksCounter"></spam>
         </p>
         <h2 class="title">Reflex</h2>
-        <p class="timer">Time: <spam class="timeCounter"></spam>
+        <p class="timer">Czas: <spam class="timeCounter"></spam>
         </p>
     </div>
     <div class="playContainer">
